HFC-3091 - Fixed scrolling-single-column control was not aligning

--- a/sass/controls/_layouts.scss
+++ b/sass/controls/_layouts.scss
@@ -352,6 +352,11 @@ body.no-scroll {
     }
   }
 
+  ~ .masthead + .page-container {
+    height: calc(100% - 98px);
+    margin-top: 98px;
+  }
+
 }
 
 .masthead {
